rules/frontend/ingress-front.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
  - http:
      paths:
      - path: /front
        backend:
          serviceName: frontend
          servicePort: 8080
