rules/frontend/ingress-say.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-say
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
  - http:
      paths:
      - path: /say
        backend:
          serviceName: frontend
          servicePort: 8080
